😒 fixed a small bug where the toc would also include the main heading of the blog

--- a/example/website/Members/Lisa.html
+++ b/example/website/Members/Lisa.html
@@ -14,6 +14,22 @@
 
 
 
+<ol><li class=toc-h2><a href='#Introduction'>Introduction</a></li>
+
+<li class=toc-h2><a href='#Dance_Sensation'>Dance Sensation</a></li>
+
+<li class=toc-h2><a href='#Multilingual_Talent'>Multilingual Talent</a></li>
+
+<li class=toc-h2><a href='#Stage_Charisma'>Stage Charisma</a></li>
+
+<li class=toc-h2><a href='#Global_Icon'>Global Icon</a></li>
+
+<li class=toc-h2><a href='#Conclusion'>Conclusion</a></li>
+</ol>
+
+
+
+
 <h2 id=Introduction class=main-h2>Introduction</h2>
 
 
